# mispatch_finder

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  pytest.ini
docs/: mispatch_finder_spec.md  todo.md
src/itdev_llm_adapter/: __init__.py  factory.py  interface.py  types.py
src/itdev_llm_adapter/adapters/: anthropic_adapter.py  openai_adapter.py
src/mispatch_finder/: __init__.py
src/mispatch_finder/app/: cli.py  cli_formatter.py  config.py  container.py  main.py  models.py  prompts.py
src/mispatch_finder/core/: analyze.py  ports.py  toolset.py
src/mispatch_finder/infra/: analysis_store.py  cache.py  cve.py  git_repo.py  llm.py  log_store.py  mcp_server.py  repository.py  result_store.py  store.py  vulnerability_data.py  vulnerability_repository.py
src/mispatch_finder/shared/: fastapi_raw_log.py  json_logging.py  list_tools.py  log_summary.py  rmtree_force.py  to_jsonable.py
tests/: conftest.py  helpers.py
tests/itdev_llm_adapter/: test_anthropic_adapter.py  test_factory.py  test_openai_adapter.py  test_types.py
tests/mispatch_finder/app/: conftest.py  test_cli.py  test_cli_commands.py  test_cli_formatter.py  test_config.py  test_main_e2e.py  test_main_facade.py
tests/mispatch_finder/core/: test_domain_models.py  test_domain_prompt.py  test_services.py  test_usecases.py  test_usecases_logs.py  test_usecases_show_log.py
tests/mispatch_finder/infra/: test_analysis_store.py  test_cache.py  test_git_repo.py  test_llm.py  test_log_store.py  test_store.py  test_vulnerability_data.py  test_vulnerability_repository.py
(+73 files in other folders)
